Fix layout bug
Also removed an unused image

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -27,9 +27,6 @@
     font-size: 2rem
     color: $beta
 
-picture
-    display: flex
-
 .selfie
     width: 175px
     margin: 0 auto
